// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description handles empty description 1`] = `
<div
  className="description description--active"
>
  <div
    className="description__content description__content--active"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Description renders correctly 1`] = `
<div
  className="description description--active"
>
  <div
    className="description__content description__content--active"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
    <figure
      className="description__figure"
    >
      <ImageZoom
        defaultStyles={
          Object {
            "image": Object {},
            "overlay": Object {},
            "zoomContainer": Object {},
            "zoomImage": Object {},
          }
        }
        image={
          Object {
            "className": "description__media",
            "src": "fake://img.con",
          }
        }
        onUnzoom={[Function]}
        onZoom={[Function]}
        shouldHandleZoom={[Function]}
        shouldReplaceImage={true}
        shouldRespectMaxDimension={false}
        zoomMargin={40}
      />
    </figure>
  </div>
</div>
`;

exports[`Description renders inactive state 1`] = `
<div
  className="description"
>
  <div
    className="description__content"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  </div>
</div>
`;
